--- a/image-viewer/package.json
+++ b/image-viewer/package.json
@@ -13,6 +13,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "element-ui": "^2.4.5",
     "vue": "^2.6.11",
     "vuex": "^3.4.0"
   },
@@ -26,10 +27,12 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.9.2",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.6",
+    "vue-cli-plugin-element": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
